# bochica

./: README.md  bochica.cabal  hades.cabal
app/: Main.hs
src/: Bochica.hs  Hades.hs
