cabal-version: 2.2

name: bochica
version: 0.1.0.0

common common
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Bochica
  build-depends:
    , base >= 4.19.1.0 && < 4.20

executable bochica
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , base
    , bochica
