cabal-version: 2.2

name: hades
version: 0.1.0.0

common common
  build-depends:
    , base ^>= 4.19.1.0
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Hades
  other-modules:
    Paths_hades
  autogen-modules:
    Paths_hades
  build-depends:
    , bytestring ^>= 0.12.1.0
    , http-client ^>= 0.7.17
    , http-client-tls ^>= 0.3.6.3
    , network-uri ^>= 2.6.4.2
    , optparse-applicative ^>= 0.18.1.0
    , tagsoup ^>= 0.14.8
    , utf8-string ^>= 1.0.2
  if os(windows)
    build-depends:
      -- https://github.com/haskell/zlib/issues/65
      , zlib >= 0.6.3.0 && < 0.7
  default-extensions:
    NamedFieldPuns

executable hades
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: hades
